--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Express Hello World on Render",
   "main": "app.js",
   "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
+  "author": "Ankit Verma",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.16.3"
   },
   "engines": {
