--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "express": "^4.16.3"
   },
